# Difference_Generator

./: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: test.yml
gendiff/: __init__.py
gendiff/modules/: formatter.py  formdiff.py  gendiff.py  loader.py
gendiff/modules/formatters/: changebool.py  json.py  plain.py  stylish.py
gendiff/scripts/: gendiff.py
gendiff/tests/: test_gendiff.py
gendiff/tests/fixtures/: expected1.txt  file3.json  file4.json
tests/: test_gendiff.py
tests/fixtures/: expected_nested.txt  expected_nested_plainstyle.txt  expected_plain.txt  file3.yml  file4.yaml  file4_nested.yml
tests/fixtures/expected/: expected_nested_jsonstyle1.json  expected_nested_jsonstyle2.json  expected_nested_jsonstyle3.json
tests/fixtures/files/: file1_nested.json  file2_nested.json  file3_nested.yaml
