[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Yulian <khantermail@gmail.com>"]
readme = "README.md"
packages = [{include = "gendiff"}]

[tool.poetry.dependencies]
python = "^3.10"
argparse = "^1.4.0"


[tool.poetry.group.dev.dependencies]
wemake-python-styleguide = "^0.18.0"
coverage = "^7.2.7"
pytest = "^7.4.0"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"
