[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Module for generating diff between two JSON-like files. Works with .json and .yml/.yaml files."
authors = ["Yulian <khantermail@gmail.com>"]
readme = "README.md"
packages = [{include = "gendiff"}]
repository = "https://github.com/ikhanter/python-project-50"
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Environment :: Console",
    "Topic :: Text Processing"
]


[tool.poetry.dependencies]
python = "^3.10"
argparse = "^1.4.0"
pyyaml = "^6.0.1"


[tool.poetry.group.dev.dependencies]
wemake-python-styleguide = "^0.18.0"
pytest = "^7.4.0"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"
